2001-10-19  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (elisp_sources): Added lists.scm.

	* load.scm (the-elisp-module): Corrected (lang elisp emacs) module
	name.

	* lists.scm (lang): New file containing list-related primitives.

	* emacs.scm: Corrected module name.

2001-10-19  Neil Jerram  <neil@ossau.uklinux.net>

	Initial implementation of an Emacs Lisp translator, based on
	transformer code originally written by Mikael Djurfeldt.
	
	* Makefile.am, .cvsignore: New.

	* ChangeLog, README, buffers.scm, emacs.scm, features.scm,
	format.scm, fset.scm, keymaps.scm, load.scm, signal.scm,
	symprop.scm, transform.scm: New files.
	
