@@ -24,7 +24,8 @@ AUTOMAKE_OPTIONS = gnu
 # These should be installed and distributed.
 elisp_sources =								   \
 	buffers.scm emacs.scm features.scm format.scm fset.scm keymaps.scm \
-	lists.scm load.scm signal.scm symprop.scm transform.scm
+	lists.scm load.scm match.scm signal.scm strings.scm symprop.scm    \
+	transform.scm
 
 subpkgdatadir = $(pkgdatadir)/$(VERSION)/lang/elisp
 subpkgdata_DATA = $(elisp_sources)
